--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,17 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>13</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -145,6 +156,7 @@
             </plugin>
 
             <!-- Required for generating coverage report -->
+            <!--
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -169,6 +181,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
 
             <!-- Required for generating PIT Mutation reports -->
             <plugin>
@@ -249,6 +262,30 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <executions>
+                    <execution>
+                        <!-- Default configuration for running -->
+                        <!-- Usage: mvn clean javafx:run -->
+                        <id>default-cli</id>
+                        <configuration>
+                            <mainClass>pt.ipp.isep.dei.esoft.project.ui.gui.App</mainClass>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
