--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,3 @@
 Company.Designation = "MusgoSublime"
 
-EmailGenerator.Class = pt.ipp.isep.dei.esoft.project.domain.adapters.EmailThroughDEIService
+EmailGenerator.Class = pt.ipp.isep.dei.esoft.project.domain.adapters.EmailThroughGmail
